# posture-productivity

./: .gitignore  LICENSE  README.md  gui_functions.py  human_posture_analysis_video.py  main.py  pose_landmark_utils.py  pose_utils.py  posture_boolean.py  posture_calculations.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature.md
compiled_app/_internal/mediapipe/python/: solution_base.py
compiled_app/_internal/wheel-0.43.0.dist-info/: RECORD
posture-app/: gui_functions.py  main.py  maintoo.py  play-sound.py  pose_utils.py  posture_boolean.py
