[tool.poetry]
name = "posture-productivity"
version = "0.1.0"
description = ""
authors = ["BergAndrew <berga2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
mediapipe = "^0.10.14"
opencv-python = "^4.9.0.80"
pysimplegui = "^5.0.4"
icecream = "^2.1.3"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"

[build-system]
`requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
`